# startup-game-ada

./: .gitignore  CMakeLists.txt  README.md
src/: combustion_pkg.adb  combustion_pkg.ads  component_pkg.adb  component_pkg.ads  constants_and_units.ads  consumable_pkg.adb  consumable_pkg.ads  employee.adb  employee.ads  engine_pkg.adb  engine_pkg.ads  fuel_pkg.ads  fuel_system_pkg.adb  fuel_system_pkg.ads  liquid_fuel_pkg.adb  liquid_fuel_pkg.ads  main.adb  oxidizer_pkg.adb  oxidizer_pkg.ads  propulsion_unit_pkg.adb  propulsion_unit_pkg.ads  solid_fuel_pkg.ads  tank_pkg.adb  tank_pkg.ads
